--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
+<!doctype html>
+<html>
+<title> UniverseCity </title>
+<head>
+  <link rel="stylesheet" type="text/css" href="main.css" >
+</head>
+
+<body>
+  <h1> Universe City: Re-Inventing Education </h1>
+<div class="lead">
+  <h2> Universe City's "Skill Share": a series of community classes given by under-represented members of Black and Brown communities to the underserved in Brownsville and East New York. </h2>
+
+  <img src="favorites/lead.jpg" width="1000px" height="500px">
+  <h4> The orange room for building and carpentry at Universe City; Y. El-Murr/NYC News Service </h4>
+
+<div class="byline">
+  <div class="picture">
+  <img src="favorites/me.jpg" width="70px" height="70px"> </div>
+ <div class="me">
+  <h5>  <p> By Yara El Murr </p>
+        <p> Oct. 16, 2019 </p> </h5> </div>
+        <div class="twitter">
+<button onclick="window.location.href = 'https://twitter.com/yaralmurr';"><img src="favorites/twitter.png" width="30px" height="30px"></button>
+      </div>
+</div>
+
+</div>
+
+<div class="text">
+<h6>  <p> On the third week of October, community hub UniverseCity is launching Skill Share: Community Classes, a series of courses given by under-represented members of Black and Brown communities to underserved community members in Brownsville and East New York.
+    </p>
+    <p> The mission of the program is to help participants who might not have any formal training to share their acquired skills, enhance their employability, develop entrepreneurial skills, acquire technical training and experience, explore artistic and creative talents, and engage in healthy sustainable lifestyles.
+      </p>
+      <p> The initiative touches on several long-standing issues: 1) the effectiveness (or its lack) of the educational system in serving underprivileged communities 2) the community-based efforts to bridge the gaps in opportunities and offer unconventional yet innovative paths for its members.
+        </p>
+        <p>	With 25% of the youth age 16 to 24 in Brownsville-Ocean Hill not in school and not working. The program is a chance for them to access affordable training and job opportunities through classes that will equip them with practical and creative skills.
+  It aims to train and empower them  by providing a safe and flexible platform to learn and grow.
+ </p>
+      <p>     Alexis Mena, a farmer and entrepreneur, is on the founding and admninistrative team of Universe City. He believes that Skill Share is a way to reconnect with his culture and ancestral roots and to introduce an alternative to the formal academic curricula which he feels has long excluded Black and Brown people. During a training of the future trainers, he said "One of the things that’s important to us is that we don’t duplicate systems of academia outside of here. Our system is less formal, more experiential, more tactile. We want to pass on generational knowledge and skills, our personal skills that we taught ourselves out of necessity."
+</h6>
+<div class="schedules">
+        <div class="first">
+          <div class="first-a">
+            <div class="a">
+            <img src="favorites/business.png" width="50%" height="50px">
+            </div>
+            <div class="b">
+            <p>
+              <h3> Business </h3>
+              Classes in marketing, finance, leadership and money management </p>
+          </div>
+ </div>
+          <div class="first-b">
+            <div class="a">
+            <img src="favorites/othernailer.png" width="50%" height="50px">
+          </div>
+          <div class="b">
+            <p>
+              <h3> Carpentry </h3>
+              Classes in carpentry, building, basic house repairs, and power tools usage
+               </p> </div>
+            </div>
+
+
+          <div class="first-c">
+            <div class="a">
+            <img src="favorites/wellness.png" width="50%" height="50px"> </div>
+            <div class="b">
+            <p>
+              <h3> Wellness </h3>
+              Classes in yoga, movement, and healing </p> </div>
+            </div>
+
+          <div class="first-d">
+            <div class="a">
+            <img src="favorites/plant.png" width="50%" height="50px"> </div>
+            <div class="b">
+            <p>
+              <h3> Farming </h3>
+              Classes in urban farming, aquaponics, cooking with organic products, and making organic hygienic products </p>  </div>
+            </div>
+
+          <div class="first-e">
+            <div class="a">
+            <img src="favorites/othermusic.png" width="50%" height="50px"> </div>
+            <div class="b">
+            <p>
+              <h3> Music </h3>
+              Classes in creative writing and songwriting, guitar classes </p> </div>
+            </div>
+          </div>
+
+        <div class="second">
+    <h6>    <p> Universe City is set in a multi-purpose warehouse on Glenmore 234, East New York. It is divided in several color-coded rooms. These colors correspond to the different chakras, and activities are located according to their relevance to what the chakras stand for.
+          </p>
+          <p> Alongside providing technical classes that push the participants' skills forward, the Skill Share program is an attempt to reconnect the community with collective wellness, broadly defined to fit each individual's needs and aspirations. In these classes, facilitators will help participants reach their individual milestones, but also work on collective community goals. One example the founders mentioned is the carpentry class: while practicing the handling of equipment, the participants can make a bench that would be donated to shelters or other facilities in the neighborhood.
+            </p>
+
+            <p> The diversity of the classes allows participants to engage in several activities, professional or recreational. Mark Key, who will be giving technology skills and recruitment workshops commented on the importance of versatility. He said
+              “Whatever you learn here, we want you to take and apply it in the real world. But they are also skills that will help you be a more well-rounded person.”
+            </p>
+          </h6>
+        </div>
+
+      </div>
+</div>
+</body>
 
